server: add list rds
