# api/sidecar.go
@@ -138,3 +138,35 @@ func ListLDS(ctx *gin.Context) {
 	}
 	ResponseData(ctx, CodeSuccess, cds)
 }
+
+// ListRDS
+// @Description 获取边车的RDS(路由)
+// @Summary  获取边车的RDS(路由)
+// @Tags 	sidecar
+// @Param	id			query		int64		true		"id"
+// @Param	namespace	query		string		true		"namespace"
+// @Param	pod			query		string		true		"pod"
+// @Success 200 {object} Result  "ok"
+// @Router /sidecar/rds/list [get]
+func ListRDS(ctx *gin.Context) {
+	idStr := ctx.Query("id")
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		ResponseError(ctx, http.StatusBadRequest, err)
+		return
+	}
+
+	kubeConfig, err := model.KubeConfigDB.GetKubeConfigById(id)
+	if err != nil {
+		ResponseData(ctx, CodeDbError, nil)
+		return
+	}
+
+	rds, err := sidecar.NewSidecar(kube.GetConfigStoreKubeConfig(kubeConfig)).
+		GetRDS(ctx.Query("namespace"), ctx.Query("pod"))
+	if err != nil {
+		Response(ctx, http.StatusOK, CodeKubeConnectError, err.Error(), nil)
+		return
+	}
+	ResponseData(ctx, CodeSuccess, rds)
+}
